crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__addition.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Add
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
                  file: "<input>"
            right:
              Literal:
                - Number: 2
                - start: 4
                  end: 5
                  file: "<input>"
            span:
              start: 0
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
