crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__array_element_assignment.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Index:
            target:
              Identifier:
                name: arr
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            index:
              Literal:
                - Number: 0
                - start: 4
                  end: 5
                  file: "<input>"
            span:
              start: 0
              end: 6
              file: "<input>"
        value:
          Literal:
            - Number: 42
            - start: 9
              end: 11
              file: "<input>"
        span:
          start: 0
          end: 12
          file: "<input>"
