crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__array_with_elements.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          ArrayLiteral:
            elements:
              - Literal:
                  - Number: 1
                  - start: 1
                    end: 2
                    file: "<input>"
              - Literal:
                  - Number: 2
                  - start: 4
                    end: 5
                    file: "<input>"
              - Literal:
                  - Number: 3
                  - start: 7
                    end: 8
                    file: "<input>"
            span:
              start: 0
              end: 9
              file: "<input>"
        span:
          start: 0
          end: 10
          file: "<input>"
