crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__bool_false.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: false
            - start: 0
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
