crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__bool_true.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: true
            - start: 0
              end: 4
              file: "<input>"
        span:
          start: 0
          end: 5
          file: "<input>"
