crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__break_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Break:
        start: 0
        end: 6
