crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__continue_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Continue:
        start: 0
        end: 9
