crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__empty_array.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          ArrayLiteral:
            elements: []
            span:
              start: 0
              end: 2
              file: "<input>"
        span:
          start: 0
          end: 3
          file: "<input>"
