crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__equality.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Eq
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
                  file: "<input>"
            right:
              Literal:
                - Number: 2
                - start: 5
                  end: 6
                  file: "<input>"
            span:
              start: 0
              end: 6
              file: "<input>"
        span:
          start: 0
          end: 7
          file: "<input>"
